# gpt-chat-bot

./: .env_sample  config.py  main.py  pyproject.toml  settings.toml
tests/: test_chatbot_messages.py
