[tool.poetry]
name = "gpt-chat-bot"
version = "0.1.0"
description = ""
authors = ["Vitor <vitorvxroma@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.140"
dynaconf = "^3.2.5"
openai = "^1.35.10"
pytest = "^8.2.2"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
